--- a/Diana_api/API_DianaRG/API_DianaRG/Properties/launchSettings.json
+++ b/Diana_api/API_DianaRG/API_DianaRG/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "api/todoitems",
+      "launchUrl": "api/API_DianaRG",
       "applicationUrl": "https://localhost:7098;http://localhost:5122",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -22,7 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/todoitems",
+      "launchUrl": "api/API_DianaR",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
