--- a/Diana_api/API_DianaRG/API_DianaRG/Properties/launchSettings.json
+++ b/Diana_api/API_DianaRG/API_DianaRG/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "api/API_DianaRG",
-      "applicationUrl": "https://localhost:7098;http://localhost:5122",
+      "applicationUrl": "http://localhost:7098;http://localhost:5122",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
